--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="input-wrapper">
                     <label for="prix" class="label label--prix">Prix</label>
-                    <input type="text" name="prix" id="prix" placeholder="€">
+                    <input type="number" name="prix" id="prix" placeholder="€">
                 </div>
                 <div class="input-wrapper">
                     <label for="quantite" class="label label--age">Quantité</label>
